@@ -1,7 +1,7 @@
 /*
  * Copyright 2010-2013 Ning, Inc.
- * Copyright 2014 Groupon, Inc
- * Copyright 2014 The Billing Project, LLC
+ * Copyright 2014-2015 Groupon, Inc
+ * Copyright 2014-2015 The Billing Project, LLC
  *
  * The Billing Project licenses this file to you under the Apache License, version 2.0
  * (the "License"); you may not use this file except in compliance with the
@@ -424,6 +424,16 @@ public abstract class JaxRsResourceBase implements JaxrsResource {
             final Object argument = elements[i];
             final Object errorMessage = elements[i + 1];
             final boolean expression = argument instanceof String ? Strings.emptyToNull((String) argument) != null : argument != null;
+            Preconditions.checkArgument(expression, errorMessage);
+        }
+    }
+
+    protected void verifyNonNull(final Object... elements) {
+        Preconditions.checkArgument(elements.length % 2 == 0, "%s should have an even number of elements", Arrays.toString(elements));
+        for (int i = 0; i < elements.length; i += 2) {
+            final Object argument = elements[i];
+            final Object errorMessage = elements[i + 1];
+            final boolean expression = argument != null;
             Preconditions.checkArgument(expression, errorMessage);
         }
     }
