@@ -1,9 +1,11 @@
 0.13.3
     https://github.com/killbill/killbill/issues/258
     https://github.com/killbill/killbill/issues/260
+    https://github.com/killbill/killbill/issues/267
     https://github.com/killbill/killbill/issues/268
     https://github.com/killbill/killbill-commons/issues/9
     Update killbill-oss-parent to 0.9.10
+    Permit empty values for Account#name and Account#email
 
 0.13.2
     https://github.com/killbill/killbill/issues/214
